# CS282-Lab---4

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  lab4tests.cpp
gtest-1.6.0/: Makefile  cmake_install.cmake
src/test/: lab4tests.cpp
